--- a/CourseCenterMS/CourseCenterMS/CourseCenterMS.csproj
+++ b/CourseCenterMS/CourseCenterMS/CourseCenterMS.csproj
@@ -72,6 +72,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmNewGroup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNewGroup.Designer.cs">
+      <DependentUpon>frmNewGroup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Attendance.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -129,6 +135,9 @@
     <Compile Include="Models\Transaction.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmNewGroup.resx">
+      <DependentUpon>frmNewGroup.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NewStudent.resx">
       <DependentUpon>NewStudent.cs</DependentUpon>
     </EmbeddedResource>
