--- a/CourseCenterMS/CourseCenterMS/CourseCenterMS.csproj
+++ b/CourseCenterMS/CourseCenterMS/CourseCenterMS.csproj
@@ -72,6 +72,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLogin.Designer.cs">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmStudentAttendance.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,7 +90,9 @@
     <Compile Include="frmGroupAttendance.Designer.cs">
       <DependentUpon>frmGroupAttendance.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmAllAtendance.cs" />
+    <Compile Include="frmAllAtendance.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmAllAtendance.Designer.cs">
       <DependentUpon>frmAllAtendance.cs</DependentUpon>
     </Compile>
@@ -175,6 +183,9 @@
     <Compile Include="Models\Transaction.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmLogin.resx">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmStudentAttendance.resx">
       <DependentUpon>frmStudentAttendance.cs</DependentUpon>
     </EmbeddedResource>
@@ -313,6 +324,12 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
     </Content>
+    <Content Include="Resources\lock2.png" />
+    <None Include="Resources\Sed-18-512.png" />
+    <None Include="Resources\Sed-18-5121.png" />
+    <None Include="Resources\splash-screen.png" />
+    <None Include="Resources\Untitled-1.png" />
+    <Content Include="Resources\white-purple-abstract-background-design-white-purple-abstract-background-design-white-modern-background-138453758.jpg" />
     <None Include="Resources\icons8_cancel_32.png" />
     <None Include="Resources\icons8_cancel_16.png" />
     <None Include="Resources\icons8_delete_161.png" />
