--- a/CourseCenterMS/CourseCenterMS/CourseCenterMS.csproj
+++ b/CourseCenterMS/CourseCenterMS/CourseCenterMS.csproj
@@ -72,6 +72,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmsheet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmsheet.Designer.cs">
+      <DependentUpon>frmsheet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmTodayStudentAttendance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTodayStudentAttendance.Designer.cs">
+      <DependentUpon>frmTodayStudentAttendance.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTodayAtendanceGroups .cs">
       <SubType>Form</SubType>
     </Compile>
@@ -189,6 +201,12 @@
     <Compile Include="Models\Transaction.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmsheet.resx">
+      <DependentUpon>frmsheet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTodayStudentAttendance.resx">
+      <DependentUpon>frmTodayStudentAttendance.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTodayAtendanceGroups .resx">
       <DependentUpon>frmTodayAtendanceGroups .cs</DependentUpon>
     </EmbeddedResource>
@@ -333,6 +351,8 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\icons8_close_window_32.png" />
+    <None Include="Resources\icons8_save_16.png" />
     <Content Include="Resources\lock2.png" />
     <None Include="Resources\Sed-18-512.png" />
     <None Include="Resources\Sed-18-5121.png" />
